--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://raw.gitmirror.com/Cyrus-Reed/Cyrus-website/blob/main/public/icons/Cyrus-website.png" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="欢迎光临先驱者之站"
+      content="欢迎光临Cyrus的科技小站"
     />
-    <link rel="apple-touch-icon" href="https://raw.gitmirror.com/Cyrus-Reed/Cyrus-website/blob/main/public/icons/Cyrus-website.png" />
-    <title>欢迎光临先驱者之站</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>欢迎光临Cyrus的科技小站</title>
   </head>
   <body>
     <div id="root"></div>
