--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="欢迎光临Cyrus的科技小站"
+      content="您好，先驱者"
     />
-    <title>欢迎光临Cyrus的科技小站</title>
+    <title>您好，先驱者</title>
   </head>
   <body>
     <div id="root"></div>
